# mlflow-pokemon-example

./: Dockerfile  MLproject  README.md  conda.yaml  pokemon.py  pokemon_param_autolog.py  pyproject.toml  requirements.txt  run-command.sh
.github/workflows/: build_image.yaml
argo_workflow/: workflow.yaml
bash_command/: curl_command.sh  fetch-model-k8s.sh  local-run.sh  local_mlflow_server_run.sh  minio_creds.sh  remote-k8s-run.sh  remote-run.sh  remote_mlflow_server_with_s3_run.sh
deploy_model_with_fastapi/: local_load_model.py
docs/: 01.Run_mlflow_locally.md
fetch_model/: fetch_model_search.py  sklearn_fetch_model_search.py  sklearn_fetch_model_stage.py  sklearn_fetch_model_version.py  spark_fetch_model.py
model_deployment/: deployment.yaml  ingress.yaml  service.yaml
models/: model1.pkl  model2.pkl
notebook/: demo.ipynb
notebook/mlruns/0/: meta.yaml
notebook/mlruns/0/3a51286d3e054900adba52d883494a57/: meta.yaml
notebook/mlruns/0/3a51286d3e054900adba52d883494a57/params/: data_url
notebook/mlruns/0/3a51286d3e054900adba52d883494a57/tags/: mlflow.source.git.commit  mlflow.source.git.repoURL
serve_model/: model_rest_api_test.py  serve_model_local.py
submit_runs/: submit_run_via_git_project.py
train_model/: pokemon.py  train.py
