[tool.poetry]
name = "mlflow-pokemon-example"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.2.2"

fastapi = "^0.94.1"
scikit-learn = "^1.0.1"
uvicorn = "^0.21.1"
boto3 = "^1.26.93"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
